# StarSharp

./: .gitignore  TODO.md  datatypes.py  demo_sens.ipynb  extract_singlet.py  extract_triplet.py  figure.py  models.py  pyproject.toml  run_fit.py  run_triplet.py  star_sharp.py  test_datatypes.py
StarSharp/: __init__.py  camera.py  solver.py  utils.py
StarSharp/datatypes/: __init__.py  double_zernikes.py  field_coords.py  moments.py  observable.py  pointing_model.py  sensitivity.py  spots.py  state.py  zernikes.py
StarSharp/io/: butler.py
StarSharp/models/: __init__.py  fiducial.py  linear.py  raytraced.py  rtp_lookup.py
bootstrap/: .gitignore  check_sensitivity.py  check_v1000_vs_3.14.sh  combine_lut_bands.py  compute_sensitivity.py  construct_pointing_model.py  focus_scan.py  make_default_sensitivity.py  refit_lut.py  run_3.12_lut.sh  run_3.14_lut.sh  run_3.3_lut.sh  run_pointing_model.sh  run_sensitivity.sh  summarize_v1000_check.py
notebooks/: Demo Moments.ipynb  Solve for vmodes.ipynb  Vmodes Comparison.ipynb  demo_sens.ipynb  linear_spot_demo.ipynb  spot_vs_gradient.ipynb
notebooks/tutorials/: 01_FieldCoords.ipynb  (+6 more)
sandbox/: .gitignore  compare_gq_ta_sensitivity.py  intrinsic.py  sensitivity.py  sensitivity_from_mtaos.py  verify_cr_continuity.py  verify_fromStop_indep.py  wfs_zernike_demo.py
tests/: conftest.py  test_butler.py  test_double_zernikes.py  test_fiducial.py  test_field_coords.py  test_linear.py  test_moments.py  test_pointing_model.py  test_raytraced.py  test_sensitivity.py  test_solver.py  test_spots.py  test_state.py  test_zernikes.py  utils.py
(+33 files in other folders)
